Version 2.02.48 - 
===============================
  Fix clvmd-corosync to match new corosync API.
  Fix makefile to build also shared libraries when running plain make.
  Fix rename of active snapshot with virtual origin.
  Fix convert polling to ignore LV with different UUID.
  Cache underlying device readahead only before activation calls.
  Fix segfault when calculating readahead on missing device in vgreduce.
  Remove verbose 'visited' messages.
  Handle multi-extent mirror log allocation when smallest PV has only 1 extent.
  Add LSB standard headers and functions (incl. reload) to clvmd initscript.
  When creating new LV, double-check that name is not already in use.
  Remove /dev/vgname/lvname symlink automatically if LV is no longer visible.
  Rename internal vorigin LV to match visible LV.
  Suppress 'removed' messages displayed when internal LVs are removed.
  Fix lvchange -a and -p for sparse LVs.
  Fix lvcreate --virtualsize to activate the new device immediately.
  Make --snapshot optional with lvcreate --virtualsize.
  Generalise --virtualoriginsize to --virtualsize.
  Skip virtual origins in process_each_lv_in_vg() without --all.
  Fix counting of virtual origin LVs in vg_validate.
  Attempt to load dm-zero module if zero target needed but not present.

Version 2.02.47 - 22nd May 2009
===============================
  Rename liblvm.so to liblvm2app.so and use configure --enable-applib.
  Reinstate version in liblvm2cmd.so soname. (2.02.44)

Version 2.02.46 - 21st May 2009
===============================
  Inherit readahead setting from underlying devices during activation.
  Detect LVs active on remote nodes by querying locks if supported.
  Enable online resizing of mirrors.
  Use suspend with flush when device size was changed during table preload.
  Implement query_resource_fn for cluster_locking.
  Support query_resource_fn in locking modules.
  Introduce CLVMD_CMD_LOCK_QUERY command for clvmd.